# libgovirt

./: .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  libgovirt.doap  meson.build
.gitlab-ci/: Dockerfile  run-docker.sh
examples/: Makefile.am  async-test.c  list-vms-async.c  list-vms.c  meson.build  sync-test.c
govirt/: Makefile.am  glib-compat.c  glib-compat.h  govirt-1.0.pc.in  govirt-private.h  govirt.h  govirt.pc.in  govirt.sym  meson.build  ovirt-action-rest-call.c  ovirt-action-rest-call.h  ovirt-api-private.h  ovirt-api.c  ovirt-api.h  ovirt-cdrom.c  ovirt-cdrom.h  ovirt-cluster-private.h  ovirt-cluster.c  ovirt-cluster.h  ovirt-collection-private.h  ovirt-collection.c  ovirt-collection.h  ovirt-data-center-private.h  ovirt-data-center.c  ovirt-data-center.h  ovirt-disk-private.h  ovirt-disk.c  ovirt-disk.h  ovirt-enum-types-private.c.template  ovirt-enum-types-private.h.template  ovirt-enum-types.c.template  ovirt-enum-types.h.template  ovirt-error.c  ovirt-host-private.h  ovirt-host.c  ovirt-host.h  ovirt-options.c  ovirt-proxy-deprecated.c  ovirt-proxy-private.h  ovirt-proxy.c  (+23 more)
po/: LINGUAS  Makevars  POTFILES.in  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  fur.po  hi.po  hr.po  hu.po  id.po  it.po  ka.po  kk.po  ko.po  kw.po  lt.po  meson.build  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
tests/: Makefile.am  meson.build  mock-httpd.c  mock-httpd.h  test-govirt.c  test-vm-parser.c
tests/https-cert/: ca-cert.pem  ca-key.pem  server-cert.pem  server-key.csr  server-key.pem
tests/mock-xml-data/: test-parse-vm-host-cluster.xml
